# slack-integration

./: .gitignore  README.md
backend/: .env.example  README.md  SETUP_GUIDE.md  check_env.py  check_schema.sql  debug_metadata.py  main.py  pyproject.toml  quick_test.py  test_article_api.py  test_article_endpoints.py  test_article_simple.py  test_db_insertion.py  test_db_schema.py  test_env_loading.py  test_notification_types.py  test_trigger_metadata.py
backend/crews/: __init__.py  article_crew.py  article_generator_crew.py  models.py
backend/crews/config/: __init__.py  article-agents.yaml  article-tasks.yaml
backend/docs/: APIFY_IMPLEMENTATION_PLAN.md  APIFY_INTEGRATION.md  APIFY_POC_EXAMPLE.md  BACKEND_DEPENDENCIES.md  IMPLEMENTATION_COMPLETE.md  SLACK_INTEGRATION_USE_CASE.md  SLACK_OAUTH_IMPLEMENTATION_GUIDE.md  SLACK_OAUTH_SETUP.md  TRIGGER_SERVICE_IMPLEMENTATION.md  crewai-upgrade-tracking.md  implementation-slack-integration
backend/examples/: trigger_integration_examples.py
backend/migrations/: 001_create_user_slack_tokens.sql  002_create_notification_logs.sql  003_update_notification_types.sql  004_add_metadata_column.sql
backend/models/: article_models.py  notification_models.py  slack_models.py
backend/repository/: article_repository.py  notification_repository.py  slack_repository.py
backend/routes/: article_routes.py  notification_routes.py  slack_routes.py  trigger_routes.py
backend/scripts/: test_notifications.py
backend/services/: article_scraper_service.py  article_service.py  integration_helpers.py  notification_service.py  slack_service.py  trigger_service.py
backend/tests/: test_notifications.py  test_trigger_routes.py  test_trigger_service.py  test_trigger_simple.py
backend/utils/: database.py
frontend/: .env.example  package-lock.json  package.json
